--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Mechatronics Engineer degree 
+  uni: UVM
+  year: August, 2018 &mdash; December, 2022
   # awards:
-  # summary:
+  # summary: Giving everything I am, hoping for the best, but expecting the worst.
